Fix preparation and rename
Renamed getAbilityTree() to getString().
Fixed getString() by adding the Secret Techniques.

Also fixed MainFrame making use of the wrong function to display information about BattleClasses and using the wrong function to display BattleClasses themselves.